--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<div>
+<form action="home.html", method="post">
+    <div>
     <label for="username">Username:</label>
     <input type="text" id="username" name="username">
 </div>
@@ -9,3 +10,6 @@
 </div>
 
 <input type="submit" value="Sign in">
+
+    
+</form>
