--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<form action="home.html", method="post">
+<form action="home.html", method="get">
     <div>
     <label for="username">Username:</label>
     <input type="text" id="username" name="username">
