--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<form action="home.html" method="post">
+<form action="home.html" method="get">
     <div>
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username">
-</div>
-<p></p>
-<div>
-    <label for="pass">Password:</label>
-    <input type="password" id="pass" name="password" minlength="8" required="">
-</div>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username">
+    </div>
+    <p></p>
+    <div>
+        <label for="pass">Password:</label>
+        <input type="password" id="pass" name="password" minlength="8" required>
+    </div>
 
-<input type="submit" value="Sign in">
-
-    
+    <input type="submit" value="Sign in">
 </form>
