--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-<form action="home.html" method="get">
-    <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username">
-    </div>
-    <p></p>
-    <div>
-        <label for="pass">Password:</label>
-        <input type="password" id="pass" name="password" minlength="8" required>
-    </div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Login Page</title>
+</head>
+<body>
+
+  <h2>Login</h2>
+  <form action="home.html" method="get">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" required><br><br>
+
+    <label for="pass">Password:</label>
+    <input type="password" id="pass" name="pass" required><br><br>
 
     <input type="submit" value="Sign in">
-</form>
+  </form>
+
+</body>
+</html>
