--- a/home.html
+++ b/home.html
@@ -1,4 +1,11 @@
-<div>
-    <h2>WELCOME TO RAVINDRA AGRICULTURE CROP SALE AND BUY PORTAL</h2>
-    
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Home</title>
+</head>
+<body>
+
+  <h2>WELCOME TO RAVINDRA AGRICULTURE CROP SALE AND BUY PORTAL</h2>
+
+</body>
+</html>
